updated portfolio project page

--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -54,17 +54,24 @@
 							<p>Detailed descriptions of past, current, and ongoing projects.</p>
 						</header>
 
-						<!-- Content -->
+						<!-- 1st project -->
 							<section id="content">
-								<a href="#" ><img class="project-img" src="images-projects/landing-page-sugaroppa.png" alt="" /></a>
+								<a href="https://github.com/ninankkim/full-stack-project" ><img class="project-img" src="images-projects/landing-page-sugaroppa.png" alt="" /></a>
 
 								<h3>Sugar Oppa</h3>
 									<p>Sugar Oppa is a full-stack app aimed at making budgeting and creating financial goals more simple.
 										The user can log in securely and gain access to tools such as a chart to show your spending,  
 										Technologies my team and I used included HTML, CSS, Javascript, Node.js, PostgresSQL, Express.js, 
 										and a REST API. </p>
+						<!-- 2nd project -->
+						<h3>React Blog</h3>
+						<p>This is a full-stack react blog that incorporates react hooks and functional components.
+							It allows uses to add new posts and comments to the posts.
+						</p>
 
-								<a href="#" ><img class="project-img" src="images-projects/memory-game.png" alt="" /></a>
+						<!-- 3rd Project -->
+
+								<a href="https://github.com/bargavi-dev/memory-game" ><img class="project-img" src="images-projects/memory-game.png" alt="" /></a>
 								<h3>Memory Game</h3>
 									<p>This memory game is a online game where the user can practice their memorization skills by flipping
 										cards to match sets of two. It was built using React and allowed me the opportunity to discover React
