--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>bargavi.dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,8 +49,9 @@
 						<header>
 							<h2>Bargavi Kanneganti</h2>
 							<p>Changing the world through tech.<br />
-							<!-- Just apps. Lots of mother flipping apps.</p> -->
-						</header>
+								<!-- Just apps. Lots of mother flipping apps.</p> -->
+								<a href="resume-nov-13.pdf" download>Download and View Resume</a>
+							</header>
 						<span class="image"><img src="images-main/photo-for-slack.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
