--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<h2>Bargavi Kanneganti</h2>
 							<p>Changing the world through tech.<br />
 								<!-- Just apps. Lots of mother flipping apps.</p> -->
-								<a href="resume-nov-13.pdf" download>Download and View Resume</a>
+								<a href="/Users/bargavikanneganti/Documents/Dev Stuff/Portfolio/Bargavi_Kannegati_Resume_May2021.pdf" download>Download and View Resume</a>
 							</header>
 						<span class="image"><img src="images-main/photo-for-slack.jpg" alt="" /></span>
 					</div>
