--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -53,9 +53,22 @@
 							<h2>All Projects</h2>
 							<p>Detailed descriptions of past, current, and ongoing projects.</p>
 						</header>
+						
 
-						<!-- 1st project -->
+						
 							<section id="content">
+								<!-- current project!!!  -->
+								<a href="https://github.com/bargavi-dev/puente-app-server" ><img class="project-img" src="images-projects/puente-logo2.png" alt="" /></a>
+
+								<h3>Puente</h3>
+									<p>This project is a side passion project I started as of May 2021. It is a language
+										and cultural exchange app made possible through React Native. It will incorporate node.js,
+										postgreSQL, express.js, graphQL, and firebase(authentication) on the backend. In addition,
+										I am using Typescript to mediate potential errors and using expo-cli to help build my project.
+										On the front-end, I am using Kitten Ui, Canva, and maps to help locate users nearby. Stay tuned!
+									</p>
+
+								<!-- 1st project -->
 								<a href="https://github.com/ninankkim/full-stack-project" ><img class="project-img" src="images-projects/landing-page-sugaroppa.png" alt="" /></a>
 
 								<h3>Sugar Oppa</h3>
@@ -64,6 +77,7 @@
 										Technologies my team and I used included HTML, CSS, Javascript, Node.js, PostgresSQL, Express.js, 
 										and a REST API. </p>
 						<!-- 2nd project -->
+						<a href="https://github.com/bargavi-dev/full-stack-react-blog" ><img class="project-img" src="images-projects/full-stack-react-blog.png" alt="" /></a>
 						<h3>React Blog</h3>
 						<p>This is a full-stack react blog that incorporates react hooks and functional components.
 							It allows uses to add new posts and comments to the posts.
