updated my story

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 							<h2>Bargavi Kanneganti</h2>
 							<p>Changing the world through tech.<br />
 								<!-- Just apps. Lots of mother flipping apps.</p> -->
-								<a href="/Users/bargavikanneganti/Documents/Dev Stuff/Portfolio/Bargavi_Kannegati_Resume_May2021.pdf" download>Download and View Resume</a>
+								<a href="Resume_BargaviKanneganti.pdf" download>Download and View Resume</a>
 							</header>
-						<span class="image"><img src="images-main/photo-for-slack.jpg" alt="" /></span>
+						<span class="image"><img src="images-main/bargavi-portfolio.JPG" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -72,15 +72,21 @@
 								<div class="col-4 col-12-medium">
 									<p>
 										My name is Bargavi Kanneganti and coding found me through a series of coding meetups
-										in Seoul, South Korea. What was once a passing interest became an urge to learn more.
-										I later learned of the unsettling rise of child abuse online through a speech by actress Blake
-										Lively, who talked of how the Child Rescue Coalition's fight to protect children around the globe.</p>
+										in Seoul, South Korea. What was once a passing interest became an drive to learn more.
+										I later learned of the unsettling rise of child abuse online through a speech by Blake
+										Lively, where she discussed the Child Rescue Coalition's fight to protect children around the globe.
+										In addition, I learned about the company Thorn, who has partnered with law enforcement and is also
+										building tools to detect child abuse online. This issue is one that is close to my heart and I was
+										motivated in a way I had never been before.
+									
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>	
-										My motivation emboldened me to protect users, especially young users, from the dangers of the dark side of the online world. Inspired
-										by software engineers working at Thorn and the Child Rescue Coalition,
-										I did not waste anytime leaping into the world of tech to make a difference. </p>
+										Inspired by software engineers working at Thorn and the Child Rescue Coalition,
+										I decided that I also want to build digital tools that help the global community around me. 
+
+									 </p>
 								</div>
 							</div>
 						</div>
